# rusty

./: .gitignore  Cargo.toml  read.me  readme.md
astro/: package-lock.json  package.json
astro/src/pages/: index.astro
frontend/: index.html
src/: db.rs  main.rs
src/user/: handlers.rs  mod.rs
svelte/: package-lock.json  package.json  svelte.config.js
svelte/src/routes/: +layout.ts  +page.svelte
