[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
mysql = "25.0.0"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = {version = "0.7.4", features = [ "mysql", "runtime-tokio-native-tls" ]}
tokio = {version = "1.37.0", features = ["full"]}
