[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
mysql = "25.0.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = {version = "0.7.4", features = [ "mysql", "runtime-tokio-native-tls", "postgres"]}
tokio = {version = "1.37.0", features = ["full"]}
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
validator = { version = "0.18.1", features = ["derive"]}
